...
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp" tools:text="LogoHome"
                android:id="@+id/homeBadge" android:layout_weight="1" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitCenter"/>
        <TextView
                android:text="0"
                android:layout_width="wrap_content"
...
                android:layout_height="wrap_content" android:id="@+id/textViewVS"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" android:textStyle="bold" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/awayBadge"/>
        <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/awayScore" android:maxLength="2"
                android:textColor="@color/colorPrimaryDark" android:textSize="18sp" android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewVS"
...
